fixed ui glitch that caused right column content to be cut off

--- a/app/styles/theme.less
+++ b/app/styles/theme.less
@@ -294,12 +294,12 @@ h2 {
 
   .margin-left-250 {
     overflow-x: hidden;
-    margin-left: 250px;
+    margin-left: 230px;
   }
 
   .margin-left-350 {
     overflow-x: hidden;
-    margin-left: 350px;
+    margin-left: 330px;
   }
 }
 
